Fixed deprecations in Java 20